netbench/src/units/snapshots/s2n_netbench__units__byte__tests__ext_test.snap
---
source: netbench/src/units/byte.rs
expression: "[42.bytes(), 42.kilobytes(), 42.kibibytes(), 42.megabytes(), 42.mebibytes(),\n        42.gigabytes(), 42.gibibytes(), 42.kibibytes() + 42.bytes()]"
---
[
    Byte(
        42,
    ),
    Byte(
        42000,
    ),
    Byte(
        43008,
    ),
    Byte(
        42000000,
    ),
    Byte(
        44040192,
    ),
    Byte(
        42000000000,
    ),
    Byte(
        45097156608,
    ),
    Byte(
        43050,
    ),
]
