netbench/src/units/snapshots/s2n_netbench__units__byte__tests__parse_test.snap
---
source: netbench/src/units/byte.rs
expression: "[p(\"42b\"), p(\"42B\"), p(\"42Kb\"), p(\"42KB\"), p(\"42Kib\"), p(\"42KiB\"), p(\"42Mb\"),\n        p(\"42MB\"), p(\"42Mib\"), p(\"42MiB\"), p(\"42Gb\"), p(\"42GB\"), p(\"42Gib\"),\n        p(\"42GiB\"), p(\"42Tb\"), p(\"42TB\"), p(\"42Tib\"), p(\"42TiB\")]"
---
[
    Ok(
        Byte(
            6,
        ),
    ),
    Ok(
        Byte(
            42,
        ),
    ),
    Ok(
        Byte(
            5250,
        ),
    ),
    Ok(
        Byte(
            42000,
        ),
    ),
    Ok(
        Byte(
            5376,
        ),
    ),
    Ok(
        Byte(
            43008,
        ),
    ),
    Ok(
        Byte(
            5250000,
        ),
    ),
    Ok(
        Byte(
            42000000,
        ),
    ),
    Ok(
        Byte(
            5505024,
        ),
    ),
    Ok(
        Byte(
            44040192,
        ),
    ),
    Ok(
        Byte(
            5250000000,
        ),
    ),
    Ok(
        Byte(
            42000000000,
        ),
    ),
    Ok(
        Byte(
            5637144576,
        ),
    ),
    Ok(
        Byte(
            45097156608,
        ),
    ),
    Ok(
        Byte(
            5250000000000,
        ),
    ),
    Ok(
        Byte(
            42000000000000,
        ),
    ),
    Ok(
        Byte(
            5772436045824,
        ),
    ),
    Ok(
        Byte(
            46179488366592,
        ),
    ),
]
